--- a/_sass/_globals.scss
+++ b/_sass/_globals.scss
@@ -17,7 +17,7 @@ body {
 }
 
 html {
-  font-family: sans-serif;
+  font-family: 'Raleway', sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
