--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -49,7 +49,7 @@
   margin-bottom: 30px;
 
   .overlay {
-    background: rgba(#000, .75);
+    background: rgba(#000, .10);
     z-index: 1;
     position: absolute;
     width: 100%;
@@ -123,7 +123,7 @@
     margin: 0;
     text-transform: lowercase;
     float: left;
-    display: inline-block;
+    // display: inline-block;
     @include transition(background .2s linear);
 
     &:last-child {
