--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,12 +1,12 @@
 
 // Google fonts api
-@import url("//fonts.googleapis.com/css?family=Lato:400,300,400italic,700");
-@import url("//fonts.googleapis.com/css?family=Lora:400,400italic,700italic,700");
+@import url("//fonts.googleapis.com/css?family=Raleway:400,300,400italic,700");
+@import url('//fonts.googleapis.com/css?family=Ubuntu:400,400italic,700italic,700');
 @import url("//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css");
 
 // Our variables
-$font-family-base  : "Lato", Helvetica, Arial, sans-serif !default;
-$font-family-serif : "Lora", serif !default;
+$font-family-base  : "Ubuntu", Helvetica, Arial, sans-serif !default;
+$font-family-serif : "Raleway", serif !default;
 $font-size-base    : 16px !default;
 $line-height-base  : 1.6 !default;
 $small-font-size   : $font-size-base * 0.875 !default;
