--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,6 @@
 <footer class="footer t-center">
   <div class="container">
-
-    {% include social-icons.html %}
-
-    <small>&copy; {{ site.time | date: '%Y' }} All rights reserved. Made with <a href="http://jekyllrb.com" target="_blank">Jekyll</a> and <i class="icon icon-heart"></i></small>
-    <small>by <a href="http://nandomoreira.me" target="_blank">nandomoreira.me</a></small>
+    <small>MattOps &copy; {{ site.time | date: '%Y' }} All rights reserved. Made with <a href="http://jekyllrb.com" target="_blank">Jekyll</a> and <i class="icon icon-heart"></i></small>
+    <small><a href="https://github.com/nandomoreirame/zetsu" target="_blank">zetsu</a>.</small>
   </div>
 </footer>
