--- a/_sass/_globals.scss
+++ b/_sass/_globals.scss
@@ -17,7 +17,7 @@ body {
 }
 
 html {
-  font-family: 'Raleway', sans-serif;
+  font-family: sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
@@ -83,6 +83,7 @@ h3,
 h4,
 h5,
 h6 {
+  font-family: $font-family-base;
   font-weight: $font-weight-bold;
   line-height: 1em;
   margin: 0 0 1em 0;
@@ -102,11 +103,12 @@ h1 {
 }
 
 h2 {
-  font-size: 1.8rem;
+  // font-size: 1.8rem;
+  font-size: 4em;
 }
 
 h3 {
-  font-size: 1.4rem;
+  font-size: 2em;
 }
 
 h4 {
