--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -5,11 +5,12 @@
 @import url("//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css");
 
 // Our variables
-$font-family-base  : "Ubuntu", Helvetica, Arial, sans-serif !default;
-$font-family-serif : "Raleway", serif !default;
-$font-size-base    : 16px !default;
-$line-height-base  : 1.6 !default;
-$small-font-size   : $font-size-base * 0.875 !default;
+$font-family-base     : "Raleway", Helvetica, Arial, sans-serif !default;
+$font-family-content  : "Ubuntu", Helvetica, Arial, sans-serif !default;
+$font-family-serif    : "Ubuntu", serif !default;
+$font-size-base       : 16px !default;
+$line-height-base     : 1.6 !default;
+$small-font-size      : $font-size-base * 0.875 !default;
 
 $spacing-unit : 30px !default;
 $padding-unit : ($spacing-unit/2) !default;
