--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -3,7 +3,7 @@
 
   <aside id="comments" class="disqus">
 
-    <h2 class="txt-center">Comments</h2>
+    <h3 class="txt-center">Comments</h2>
 
     <div id="disqus_thread"></div>
 
@@ -16,7 +16,7 @@
 
       (function() {
           var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-          dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+          dsq.src = 'https://' + disqus_shortname + '.disqus.com/embed.js';
           (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
       })();
     </script>
