--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,8 +1,8 @@
 
 // Google fonts api
-@import url("//fonts.googleapis.com/css?family=Raleway:400,300,400italic,700");
-@import url('//fonts.googleapis.com/css?family=Ubuntu:400,400italic,700italic,700');
-@import url("//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css");
+@import url("https://fonts.googleapis.com/css?family=Raleway:400,300,400italic,700");
+@import url("https://fonts.googleapis.com/css?family=Ubuntu:400,400italic,700italic,700");
+@import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css");
 
 // Our variables
 $font-family-base     : "Raleway", Helvetica, Arial, sans-serif !default;
